2001-04-18  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_ui_account_get_balance): use current
	stock quotes to get balances for stock/mutual/currency accounts

	* src/gnome/window-main.c: check for NULL toolbar parents

	* src/engine/sixtp-xml-write-utils.c: use new func below

	* src/engine/sixtp-dom-generators.c (timespec_sec_to_string): use
	new func below.

	* src/engine/sixtp-utils.c (timespec_secs_to_given_string): new
	func. format timezone string by hand (solaris fix)

	* src/engine/gnc-account-xml-v2.c (gnc_account_end_handler): only
	begin editing the account if parsing was successful

	* src/test/test-xml-account.c (test_add_account): don't delete
	the account, because it's referenced by the parser after the
	callback.

2001-04-17  Bill Gribble  <grib@billgribble.com>

	* src/gnome/window-main.c: More changes for MDI.  I think we
	finally have toolbars handled right.  Also new windows for account
	trees.

2001-04-17  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/utilities.scm (string-split): used to be string-split-on
	in qif-utils.scm

	* src/scm/qif-import/qif-utils.scm: move string-split-on to
	utilities.scm as string-split to better match string-join.

	* src/scm/qif-import/qif-to-gnc.scm (qif-import:qif-to-gnc):
	string-split-on -> string-split.

	* src/scm/qif-import/qif-dialog-utils.scm
	(qif-import:get-all-accts): string-split-on -> string-split.

	* src/scm/price-quotes.scm (yahoo-get-historical-quotes): new
	function - retrieve lists of historical quote information.

	* src/scm/bootstrap.scm.in (%load-path): add new guile-modules
	directory so we can use-modules from there.

	* src/guile/Makefile.am (CLEANFILES): add gnucash.c so it goes
	away on "make clean" in addition to "make distclean".

	* src/engine/gnc-pricedb.c: minor doc updates.

	* src/engine/gnc-pricedb.h: much more documentation.

	* lib/guile-www: new directory - contains guile-www CVS module.
	Used by new historical quote function.  Several new files added.